<resources>
    <string name="app_name">Sem08</string>
    <string name="title_activity_principal">Principal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="msg_nombre">Nombre del lugar</string>
    <string name="msg_email">eMail (lugar@xxxx.xxx)</string>
    <string name="msg_telefono">Teléfono (9999-9999)</string>
    <string name="msg_web">Sitio WEB</string>
    <string name="msg_error">Error</string>
    <string name="bt_update_lugar">Actualizar Lugar</string>
    <string name="bt_agregar_lugar">Agregar Lugar</string>
    <string name="bt_delete_lugar">Eliminar Lugar</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="msg_lugar_updated">Lugar Actualizado</string>
    <string name="msg_lugar_added">Lugar Agregado…</string>
    <string name="msg_lugar_deleted">Lugar Eliminado…</string>
    <string name="msg_data">Faltan Datos!</string>
    <string name="msg_seguro_borrado">¿Está seguro de eliminar el lugar: </string>
    <string name="msg_si">Si</string>
    <string name="msg_no">No</string>

    <string name="todo">To DO</string>
    <string name="msg_imagen">Imagen del lugar</string>
    <string name="msgEscucharAudio">Play audio</string>
</resources>